--- a/tail-end-yarns/src/shared.scss
+++ b/tail-end-yarns/src/shared.scss
@@ -58,7 +58,7 @@ div.MainFooter h1.column-header{
   margin-top: 20px;
   margin-bottom: 5px;
   font-family: Roboto, sans-serif;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 div.MainFooter ul.footer-links{
